# hazen

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yaml  20180821-Automated_Coil_QA_Documentation.docx  ANNUALQA.MR.HEAD_GENERAL.tra.slice_width.IMA  Brewfile  CITATION.cff  CONTRIBUTING.md  Daily_MR_QA.py  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  Notes on Elective - Part 2.pptx  Procfile  README-PyPI.md  README.md  SNR.py  Spatial_Resolution.py  Uniformity.py  app.py  bitbucket-pipelines.yml  codecov.yml  config.py  contributers.txt  contributors.txt  docker-compose.yml  environment-matplotlib3.1.yml  environment-opencv3.4.yml  environment.yml  hazen-app  hazen.py  mr_coil_analysis.py  mr_coil_qa.py  mr_coil_snr.py  mrqa_functions.py  pyproject.toml  pytest-coverage.txt  requirements-numpy-latest.txt  (+10 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new-issue.md
.github/workflows/: ci_commit.yml  ci_pr.yml  ci_release.yml  cli-test.yml  deployment.yml  publish_docker.yml  publish_pypi.yml  python-app.yml  test_cli.yml  tests_development.yml  tests_development_py3.9.yml  tests_release.yml
app/: __init__.py  database.py  email.py  log_levels_fun.py  models.py  tasks.py  utils.py
app/auth/: __init__.py  email.py  forms.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  forms.py  routes.py
app/reports/: __init__.py  forms.py  routes.py
app/templates/: _acquisition.html
app/uploader/: __init__.py  routes.py
app/util/: utils.py
datalog/: AWP141028.csv  CNSCNSA.csv  CNSCNSB.csv  CNSCNSD.csv  CRFCRFA.csv
docs/: Makefile  app.main.rst  app.reports.rst  conf.py  contributing_link.rst  hazenlib.rst  index.rst  modules.rst  requirements.rst
docs/_build/: needs.json
docs/api/: app.auth.rst  app.errors.rst  app.rst  app.uploader.rst  app.util.rst
docs/concepts/: concepts.rst
docs/getting_started/: getting_started.rst
docs/guides/: guides.rst
docs/source/: acquisitionrequirements.html  acquisitionrequirements.rst  conf.py  contributors.rst  getinvolved.rst  gettingstarted.rst  hazenlib.rst  hazenlib.tasks.acr.rst  hazenlib.tasks.magnet.rst  hazenlib.tasks.rst  index.rst  inputrequirements.html  inputrequirements.rst  modules.rst  references.bib  taskdescriptions.html  taskdescriptions.rst  tasks.rst
hazen/: snr.py  spatial_resolution.py
hazenlib/: ACRObject.py  ACR_uniformity.py  HazenTask.py  __init__.py  __main__.py  _version.py  acr_geometric_accuracy.py  acr_ghosting.py  acr_tools.py  acr_uniformity.py  config.py  constants.py  discovery.py  exceptions.py  execution.py  formatters.py  ghosting.py  hazen.py  logger.py  orchestration.py  relaxometry.py  relaxometry_params.py  shapes.py  slice_position.py  slice_width.py  snr.py  snr_map.py  sp_res_new.py  spatial_resolution.py  tes.py  tools.py  types.py  uniformity.py  utils.py
hazenlib/data/: relaxometry_params.py
hazenlib/tasks/: acr_geometric_accuracy.py  acr_ghosting.py  acr_low_contrast_object_detectability.py  acr_object_detectability.py  acr_sagittal_geometric_accuracy.py  acr_slice_position.py  acr_slice_thickness.py  acr_snr.py  acr_spatial_resolution.py  acr_uniformity.py  ghosting.py  halloween.py  hazen_spatial_resolution.py  relaxometry.py  slice_position.py  slice_width.py  snr.py  snr_map.py  sp_res_new.py  spatial_resolution.py  task_acr_geometric_accuracy.py  task_acr_ghosting.py  task_acr_slice_position.py  task_acr_uniformity.py  uniformity.py
migrations/versions/: 18d51fa5fb8d_posts_table.py  55de84fb328d_typo_dataf.py  (+10 more)
tests/: __init__.py  test_ACRObject.py  test___init__.py  test_acr_geometric_accuracy.py  test_acr_ghosting.py  test_acr_low_contrast_object_detectability.py  test_acr_object.py  test_acr_object_detectability.py  test_acr_sagittal_geometric_accuracy.py  test_acr_slice_position.py  test_acr_slice_thickness.py  test_acr_snr.py  test_acr_spatial_resolution.py  test_acr_tools.py  test_acr_uniformity.py  test_config.yml  test_discovery.py  test_enhanced.py  test_execution.py  test_formatters.py  test_ghosting.py  test_hazen_spatial_resolution.py  test_hazenlib.py  test_log_level_fun.py  test_model.py  test_models.py  test_orchestration.py  test_relaxometry.py  test_slice_position.py  test_slice_width.py  test_snr.py  test_snr_map.py  test_spatial_resolution.py  test_tools.py  test_types.py  test_uniformity.py  test_utils.py
(+1086 files in other folders)
