[project]
name = "hazen"
version = "1.3.4"
description = "An automatic MRI QA tool"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "colorlog==6.7.0",
    "docopt==0.6.2",
    "imutils==0.5.4",
    "matplotlib==3.7.2",
    "numpy==1.26.0",
    "opencv-python==4.8.1.78",
    "opencv-python-headless==4.8.1.78",
    "pydicom==2.4.1",
    "scikit-image==0.21.0",
    "scipy==1.11.3",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pytest==7.4.2",
    "pytest-cov>=6.1.1",
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.0",
    "sphinxcontrib-bibtex==2.5.0",
]