[project]
name = "hazen"
version = "1.3.4"
description = "An automatic MRI QA tool"
authors = [
        {name = "Alex Drysdale", email = "alexander.drysdale@wales.nhs.uk"},
        {name = "Shuaib, Haris", email = "mohammad_haris.shuaib@kcl.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "colorlog>=6.9.0",
    "docopt>=0.6.2",
    "imutils>=0.5.4",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pydicom>=2.4.4",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
]

[tool.uv]
package = true

[project.scripts]
hazen = "hazenlib:main"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.5",
    "types-docopt>=0.6.11.20241107",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hazenlib"]
