[metadata]
name = hazen
version = attr: hazenlib._version.__version__
url = https://bitbucket.org/gsttmri/hazen
author = Shuaib, Haris
author_email = mohammad_haris.shuaib@kcl.ac.uk
description = An automatic MRI QA tool
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9,<=3.11
install_requires =
    pydicom==2.2.2
    numpy>=1.24.1
    matplotlib>=3.5.1
    docopt==0.6.2
    opencv-python-headless==4.6.0.66
    scikit-image>=0.19.3
    scipy>=1.12.0
    imutils==0.5.3
    colorlog==6.6.0
include_package_data=True

[options.entry_points]
console_scripts =
    hazen = hazenlib:main
