[metadata]
name = hazen
version = attr: hazenlib._version.__version__
url = https://bitbucket.org/gsttmri/hazen
author = Shuaib, Haris
author_email = mohammad_haris.shuaib@kcl.ac.uk
description = An automatic MRI QA tool
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9,<3.12
install_requires =
    pydicom==2.4.1
    numpy>=1.26.0
    matplotlib>=3.7.2
    docopt==0.6.2
    opencv-python-headless==4.8.1.78
    scikit-image>=0.21.0
    scipy>=1.11.3
    imutils==0.5.4
    colorlog==6.7.0
include_package_data=True

[options.entry_points]
console_scripts =
    hazen = hazenlib:main
